syntax = "proto3";

package grpc;

option go_package = "./proto";

service Datanode{
	// Registra las jugadas de un jugador
	rpc GuardarJugada (GuardarJugadaReq) returns (GuardarJugadaResp);
	// Devuelve las jugadas de un jugador
	rpc ObtenerJugadas (ObtenerJugadasReq) returns (ObtenerJugadasResp);
}

message GuardarJugadaReq{
	int32 numJugador = 1;
	int32 ronda = 2;
	int32 jugada = 3;
}

message GuardarJugadaResp{
	string msg = 1;
}

message ObtenerJugadasReq{
	int32 numJugador = 1;
	int32 ronda = 2;
}

message ObtenerJugadasResp{
	string msg = 1;
}
